--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div style="text-align:center">
   <h1>
   
-      Deepak, This Angular app is running in a Docker container inside Azure Kubernetes Service (AKS)
+      Deepak Bohra, This Angular app is running in a Docker container inside Azure Kubernetes Service (AKS)
     
     <br>
     Welcome to {{ title }}!
