--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div style="text-align:center">
   <h1>
   
-      Deepak Bohra, This Angular app is running in a Docker container inside Azure Kubernetes Service (AKS), trigger release after every new Build
+      Deepak Bohra, This Angular app is running in a Docker container inside Azure Kubernetes Service (AKS), From Azure account subscription for Kubernetes
     
     <br>
     Welcome to {{ title }}!
